fix: update ElmFile component structure for better readability and styling

--- a/packages/qwik/src/components/madia/elm-file.module.scss
+++ b/packages/qwik/src/components/madia/elm-file.module.scss
@@ -17,6 +17,7 @@
 
 .file-size {
   text-align: right;
+  opacity: 0.5;
 }
 
 .download-icon {
